welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:1: error: Unit does not take parameters
do avance(){
           ^